--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   devops1-app:
-    image: nchoyn2021/devops-repo:latest
+    image: nchoyn2021/twitter-api:latest
     environment:
       - SPRING_PROFILES_ACTIVE=prod
       - SPRING_DATASOURCE_URL=jdbc:mysql://devops1-mysql:3306/devops1?useUnicode=true&characterEncoding=utf8&useSSL=false
